Fix light/dark toggle; no jumpiness too

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -44,6 +44,9 @@ nav {
 
 #dark-mode-toggle {
     border-bottom: none;
+    &:hover {
+        background-color: transparent;
+    }
 }
 
 
